--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.serviceArea.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.serviceArea.html
@@ -4,8 +4,8 @@
       <!-- <div ng-include="'/static/ngTemplates/app.ecommerce.vendor.configure.FAQ.form.html'"></div> -->
       <div class="row">
       <select multiple class="col-md-8 pull-right" style="height:50vh;">
-        <option  ng-repeat="p in pincodelist" value="p.pincodes">{{p.pincodes}}</option>
-      </SELECT>
+        <option  ng-repeat="p in pincodelist" value="p.pincodes">{{p.pincodes}} </option>
+      </select>
     </div>
     </div>
     <div class="col-md-4">
