--- a/static_shared/ngTemplates/productCart.html
+++ b/static_shared/ngTemplates/productCart.html
@@ -1,6 +1,7 @@
 <div  style="cursor:pointer;">
   <div  ng-click="openDetails(list.pk,list.product.name.split(' ').join('-'))" style="margin-bottom:15px;margin-left:15px;margin-right:15px">
     <div class="row" class="text-center">
+      <span ng-if="list.product.discount>0" style="position:absolute;background-color:green;color:white;padding-right:15px;padding-left:15px; border-radius:15px 15px 15px 15px;margin-top:20px;font-size:20px">{{list.product.discount}}% Off </span>
       <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;overflow:hidden;">
         <img style="width: 100%;" class="img" ng-src="{{list.files[0].attachment}}" ng-if="list.files.length>0">
         <img style="width: 100%;" class="img" src="/static/images/ecommerce.jpg" ng-if="list.files==null">
@@ -80,7 +81,7 @@
               </div>
               <div style="color:#808080; padding:10px 10px 10px 10px;margin:0px;height:60px" ng-if="list.added_cart>0&&!me.pk">
                 <div class="col-md-4 col-sm-4 col-xs-4 text-right">
-                  <i class="fa fa-minus-circle fa-2x" style="cursor:pointer" ng-if="list.added_cart>1&&!me.pk"  ng-click="decrementCookie();$event.stopPropagation()"></i>
+                  <i class="fa fa-minus-circle fa-2x" style="cursor:pointer" ng-if="!me.pk"  ng-click="decrementCookie();$event.stopPropagation()"></i>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="bottom: 10px">
                   <span style="font-size:25px; padding:0px 0px 0px 0px;"> {{list.added_cart}} </span>
