--- a/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
+++ b/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
@@ -136,6 +136,8 @@
         </div>
       </div>
       <div class="col-md-1" style="padding-top:85px; padding-left:15px;">
+        <!--Just for testing purpose  -->
+        <a href="/api/warehouse/downloadPdf/"><i class="fa fa-2x fa-download">PDF</i> </a>
         <button type="button" class="btn btn-default btn-md pull-right" ng-click="addCommodity()"><i class="fa fa-plus"></i> Commodity</button>
       </div>
     </div>
