--- a/ecommerce/static/ngTemplates/app.ecommerce.account.default.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.default.html
@@ -1,7 +1,21 @@
 
 <p style="text-align:center;padding-top:200px;">
-  <i class="fa fa-search-plus fa-5x"></i>
+  <div class="row">
+    <div class="col-md-4">
+      <h1 style="text-align:center;"> {{inCart.length}}</h1>
+        <h2 style="text-align:center;"> In Cart</h2>
+    </div>
+    <div class="col-md-4">
+      <h1 style="text-align:center;">{{inFavourite.length}} </h1>
+      <h2 style="text-align:center;"> In Whishlist</h2>
+    </div>
+    <div class="col-md-4">
+      <h1 style="text-align:center;">{{inInvoice.length}} </h1>
+      <h2 style="text-align:center;"> In Process</h2>
+    </div>
+  </div>
+  <!-- <i class="fa fa-search-plus fa-5x"></i>
   <i class="fa fa-shopping-cart fa-5x "></i>
-  <br>
-  <h3 class="text-muted" style="text-align:center;"> Dashboard for Ecommerce public's account</h3>
+  <br> -->
+  <!-- <h3 class="text-muted" style="text-align:center;"> Dashboard for Ecommerce public's account</h3> -->
 </p>
