--- a/ecommerce/static/ngTemplates/app.ecommerce.account.settings.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.settings.html
@@ -51,13 +51,13 @@
       </div>
       <div class="form-group">
         <input type="checkbox" ng-model="form.primary">
-        <label>Primary Address </label>
+        <label>Primary Address </label></br>
+        <span ng-if="showMessage" style="color:red">Sorry!! We Don't Service in this Area </span>
       </div>
       <div class="row text-center" style="padding-top:35px">
-        <button ng-click="saveAddress()" type="button" class="btn btn-primary" ng-if="!showMessage">
+        <button ng-click="saveAddress()" type="button" class="btn btn-primary" >
           Save
         </button>
-        <span ng-if="showMessage">Sorry!! We Don't Service in this Area </span>
       </div>
     </div>
     <div class="col-md-6 col-xs-12" style="padding-left:55px" ng-if="savedAddress.length>0">
