--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -444,8 +444,10 @@
                       </div>
                     </div>
                     <div class="row" style="margin-bottom:35px">
-
-                      <div class="hidden-xs col-md-12 col-sm-6" ng-if="!showMessage">
+                      <div class="hidden-xs col-md-12 col-sm-6" ng-if="showMessage">
+                        <span style="color:red">Sorry!! We Don't Service in this Area
+                      </div>
+                      <div class="hidden-xs col-md-12 col-sm-6" >
                         <button type="button" class="btn btn-warning" ng-click="saveAdd()" ng-if="data.address.pk == none">
                         <i class="fa fa-star fa-lg"></i> &nbsp;Save for later use
                       </button>
@@ -453,19 +455,17 @@
                       Cancel
                       </button>
                       </div>
-                      <div class="hidden-xs col-md-12 col-sm-6" ng-if="showMessage">
-                        <span>Sorry!! We Don't Service in this Area
+                      <div class="hidden-lg hidden-md hidden-sm col-xs-12 " ng-if="showMessage">
+                        <span style="color:red">Sorry!! We Don't Service in this Area
                       </div>
-                      <div class="hidden-lg hidden-md hidden-sm col-xs-12 " ng-if="!showMessage">
+
+                      <div class="hidden-lg hidden-md hidden-sm col-xs-12">
                         <button type="button" class="btn btn-warning" ng-click="saveAdd()" ng-if="data.address.pk == none" style="width:100%">
                         <i class="fa fa-star fa-lg"></i> &nbsp;Save for later use
                       </button><br/><br/>
                         <button type="button" class="btn btn-primary" ng-click="cancel()" ng-if="data.address.pk == none" style="width:100%">
                       <i class="fa fa-close fa-lg"></i> &nbsp;Cancel
                       </button>
-                      </div>
-                      <div class="hidden-lg hidden-md hidden-sm col-xs-12 " ng-if="showMessage">
-                        <span>Sorry!! We Don't Service in this Area
                       </div>
 
 
@@ -683,7 +683,7 @@
             <button type="button" class="btn btn-default pull-left" ng-click="prev()">
               Go back
             </button>
-            <button type="button" class="btn btn-success pull-right" ng-click="next()" ng-if="!showMessage">
+            <button type="button" class="btn btn-success pull-right" ng-click="next()">
               Next
             </button>
           </div>
