--- a/ecommerce/static/ngTemplates/app.ecommerce.search.typehead.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.search.typehead.html
@@ -7,10 +7,13 @@
       <div class="col-xs-6">
         <span ng-bind-html="match.label | uibTypeaheadHighlight:query"></span>
       </div>
-      <div ng-if="match.model.typ == 'list' && !match.model.added && me.pk" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
+      <div ng-if="match.model.typ == 'list' && !match.model.added && me.pk&&match.model.inStock>0 " class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
         <button type="button" class="btn btn-success" ng-click="addToCart(match.model)">
           Add to Cart
         </button>
+      </div>
+      <div ng-if="match.model.typ == 'list' && !match.model.added && me.pk&&match.model.inStock==0 " class="col-xs-4 text-right" style="padding-top:7px;font-size:18px;color:#ef4a1e" ng-click="$event.stopPropagation();">
+        Out of Stock..
       </div>
       <div ng-if="match.model.typ == 'list' && match.model.added>0 && me.pk" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
         <!-- <button type="button" class="btn btn-default">
@@ -32,10 +35,13 @@
           <i class="fa fa-plus-circle fa-lg" style="cursor:pointer"  ng-click="incrementCart(match.model);$event.stopPropagation()"></i>
         </div> -->
       </div>
-      <div ng-if="match.model.typ == 'list' && !match.model.added&& !me.pk" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
+      <div ng-if="match.model.typ == 'list' && !match.model.added&& !me.pk&&match.model.inStock>0" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
         <button type="button" class="btn btn-success" ng-click="addToCartCookie(match.model)">
           Add to Cart
         </button>
+      </div>
+      <div ng-if="match.model.typ == 'list' && !match.model.added&& !me.pk&&match.model.inStock==0" class="col-xs-4 text-right" style="padding-top:7px;font-size:18px;color:#ef4a1e" ng-click="$event.stopPropagation();">
+          Out of Stock..
       </div>
       <div ng-if="match.model.typ == 'list' && match.model.added>0 && !me.pk" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
         <div class="col-md-10 col-sm-10 col-xs-10 text-right">
