--- a/HR/static/ngTemplates/app.HR.form.createCustomer.html
+++ b/HR/static/ngTemplates/app.HR.form.createCustomer.html
@@ -1,5 +1,5 @@
 <div class="col-md-6" ng-controller="admin.editCustomer" >
-  <h4>{{mode=='new' ? 'New' : 'Edit'}} Customer</h4>
+  <h3><strong>{{mode=='new' ? 'New' : 'Edit'}} Client</strong></h3>
   <div class="form-group" >
     <div style="margin:30px">
       <label class="radio-inline"><input type="radio" name="full" ng-model="newCustomer.access" value="full_access" ><span style="padding-left:10px;" >Full access</span> </label>
