--- a/HR/static/ngTemplates/app.HR.manage.users.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.html
@@ -6,7 +6,7 @@
         <uib-tab-heading>
           New Advisors <i class="fa fa-plus"></i>
         </uib-tab-heading>
-        <generic-Form template="'/static/ngTemplates/app.HR.form.newUser.html'" data="newUser" submit-Fn="createUser()" form-title="'Create New User'"></generic-Form>
+        <generic-Form template="'/static/ngTemplates/app.HR.form.newUser.html'" data="newUser" submit-Fn="createUser()" form-title="'Create New Advisor'"></generic-Form>
       </uib-tab>
 
 
