--- a/support/static/ngTemplates/app.customers.form.html
+++ b/support/static/ngTemplates/app.customers.form.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" ng-controller="businessManagement.customers.form">
   <div class="col-md-6">
     <div class="row" style="padding-left:25px;padding-bottom:10px">
-      <h3>{{mode=='new'?'Create':'Edit'}} Company</h3>
+      <h3>{{mode=='new'?'Create':'Edit'}} Client</h3>
     </div>
     <div class="form-group">
       <label>Name</label>
