--- a/support/static/ngTemplates/app.reviews.html
+++ b/support/static/ngTemplates/app.reviews.html
@@ -2,7 +2,7 @@
 
   <breadcrumb></breadcrumb>
 
-  <div class="row container-fluid" style="padding:20px">
+  <div class="container-fluid" style="padding:20px">
     <div class="col-md-2">
       <div class="form-group">
         <label><b> Select Date </b></label>
