--- a/ecommerce/static/ngTemplates/app.ecommerce.details.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.details.html
@@ -101,7 +101,7 @@
             </div>
           </div>
           <div class="col-md-12" ng-if="!showOptions||details.in_stock=='false'">
-            <span style="font-size:25px;color:#ef4a1e">Out Of Stock..</span>
+            <span style="font-size:25px;color:#ef4a1e">Out Of Stock</span>
           </div>
         </div>
         <div class="row" style="padding:10px;" ng-if="me == null">
@@ -140,7 +140,7 @@
             </div>
           </div>
           <div class="col-md-12" ng-if="!showOptions||details.in_stock=='false'">
-            <span style="font-size:25px;color:#ef4a1e">Out Of Stock..</span>
+            <span style="font-size:25px;color:#ef4a1e">Out Of Stock</span>
           </div>
         </div>
 
