--- a/ecommerce/static/ngTemplates/app.ecommerce.search.typehead.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.search.typehead.html
@@ -12,14 +12,14 @@
           Add to Cart
         </button>
       </div>
-      <div ng-if="match.model.typ == 'list' && !match.model.added && me.pk&&match.model.inStock==0 " class="col-xs-4 text-right" style="padding-top:7px;font-size:18px;color:#ef4a1e" ng-click="$event.stopPropagation();">
-        Out of Stock..
+      <div ng-if="match.model.typ == 'list' && me.pk&&match.model.inStock==0 " class="col-xs-4 text-right" style="padding-top:7px;font-size:18px;color:#ef4a1e" ng-click="$event.stopPropagation();">
+        Out of Stock
       </div>
-      <div ng-if="match.model.typ == 'list' && match.model.added>0 && me.pk" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
+      <div ng-if="match.model.typ == 'list' && match.model.added>0 && me.pk&&match.model.inStock>0" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
         <!-- <button type="button" class="btn btn-default">
           Added
         </button> -->
-        <div class="col-md-10 col-sm-10 col-xs-10 text-right">
+        <div class="col-md-12 col-sm-10 col-xs-10 text-right">
           <span>
             <i class="fa fa-minus-circle fa-2x" style="cursor:pointer;margin-right:10px" ng-if="match.model.added>0&&me.pk"  ng-click="decrementCart(match.model);$event.stopPropagation()"></i>
           <span style="font-size:20px; padding:0px 0px 0px 0px;margin-right:10px"> {{match.model.added}} </span>
@@ -35,15 +35,15 @@
           <i class="fa fa-plus-circle fa-lg" style="cursor:pointer"  ng-click="incrementCart(match.model);$event.stopPropagation()"></i>
         </div> -->
       </div>
-      <div ng-if="match.model.typ == 'list' && !match.model.added&& !me.pk&&match.model.inStock>0" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
+      <div ng-if="match.model.typ == 'list' &&  !me.pk&&match.model.inStock>0" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
         <button type="button" class="btn btn-success" ng-click="addToCartCookie(match.model)">
           Add to Cart
         </button>
       </div>
-      <div ng-if="match.model.typ == 'list' && !match.model.added&& !me.pk&&match.model.inStock==0" class="col-xs-4 text-right" style="padding-top:7px;font-size:18px;color:#ef4a1e" ng-click="$event.stopPropagation();">
-          Out of Stock..
+      <div ng-if="match.model.typ == 'list' && !me.pk&&match.model.inStock==0" class="col-xs-4 text-right" style="padding-top:7px;font-size:18px;color:#ef4a1e" ng-click="$event.stopPropagation();">
+          Out of Stock
       </div>
-      <div ng-if="match.model.typ == 'list' && match.model.added>0 && !me.pk" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
+      <div ng-if="match.model.typ == 'list' && match.model.added>0 && !me.pk&&match.model.inStock>0" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
         <div class="col-md-10 col-sm-10 col-xs-10 text-right">
           <span>
             <i class="fa fa-minus-circle fa-2x" style="cursor:pointer;margin-right:10px" ng-if="!me.pk"  ng-click="decrementCookie(match.model);$event.stopPropagation()"></i>
