--- a/HR/static/ngTemplates/app.HR.manage.customers.items.html
+++ b/HR/static/ngTemplates/app.HR.manage.customers.items.html
@@ -1,35 +1,48 @@
-<div class="col col-md-3 animated fadeIn" style="margin-bottom:15px;">
+<div class="col col-md-3 animated fadeIn" style="margin-bottom:15px;;cursor:pointer" ng-click="rowActionClicked('customerExplore')">
   <div class="container-fluid">
     <div class="row">
       <div class="container-fluid card" style="padding-bottom:0px;">
-        <div class="row" style="border-bottom: 1px solid #dedede;">
+        <div class="row" style="border-bottom: 1px solid #dedede;height:100px;">
           <div class="col-md-4" style="padding:0px;">
-            <img style="width: 100%;height:100%;" class="img" ng-if="data.profile.displayPicture != null" ng-src="{{data.profile.displayPicture}}">
-            <img style="width: 100%;height:100%;" class="img" ng-if="data.profile.displayPicture == null" src="/static/images/userIcon.png">
+            <img style="height:95px;" class="img" ng-if="data.profile.displayPicture != null" ng-src="{{data.profile.displayPicture}}">
+            <img style="height:95px;" class="img" ng-if="data.profile.displayPicture == null" src="/static/images/userIcon.png">
           </div>
-          <div class="col-md-6" style="position:relative;display:block;">
-            <div class="row" style="padding-left:10px;">
+          <div class="col-md-8 text-center" style="position:relative;display:block;">
+            <span class="text-muted" style="position:absolute; top:10px;right:10px;">
+              <i class="fa fa-hashtag"></i> <span style="font-size:14px;">{{data.pk}}</span>
+            </span>
+            <div class="row" style="padding-top:10px">
               <h3>{{data.first_name + ' ' + data.last_name}}</h3>
             </div>
           </div>
-          <div class="col-md-1" style="position:relative;display:block;">
+          <!-- <div class="col-md-1" style="position:relative;display:block;">
             <div class="row" style="padding-top:30px" >
                 <i class="fa fa-pencil fa-lg" style="cursor:pointer;" ng-click="rowActionClicked('editCustomer')" ></i>
             </div>
-            <div class="row"style="padding-top:20px" >
-                <i mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="rowActionClicked('deleteCustomer')" confirm-button-type="default" cancel-button-type="default" class="fa fa-trash fa-lg" style="cursor:pointer;" ></i>
-
-                  <!-- <button type="button" class="btn btn-success" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="save('approve')" confirm-button-type="default" cancel-button-type="default" style="position:relative;top:30px;right:-15px;cursor:pointer;">Approve</button> -->
-
-            </div>
-          </div>
+          </div> -->
         </div>
-        <div class="row container-fluid" style="padding-top:20px;height:70px;border-bottom: 1px solid #dedede">
-          <div class="container-fluid">
-            <span ng-if="data.profile.mobile != null"><strong><i style="width:30px;" class="fa fa-mobile"></i> </strong>{{data.profile.mobile}}</span> <br>
-            <span ng-if="data.email != null"><strong><i style="width:30px;" class="fa fa-envelope"></i> </strong>{{data.email}}</span>
-            <span ng-if="data.profile.mobile == null && data.email == null" class="text-muted">No contact details</span>
-          </div>
+        <div class="row" style="padding:10px;height:70px;border-bottom: 1px solid #dedede;font-size:17px">
+          <!-- <div class="col-md-12"> -->
+            <div class="row">
+              <div class="col-md-2">
+                <strong><i style="width:20px;" class="fa fa-user"></i> </strong>
+              </div>
+              <div class="col-md-10">
+                <span>{{data.username}}</span>
+              </div>
+            </div>
+            <div class="row" ng-if="data.email != null">
+              <div class="col-md-2">
+                <strong><i style="width:20px;" class="fa fa-envelope"></i> </strong>
+              </div>
+              <div class="col-md-10">
+                <span>{{data.email}}</span>
+              </div>
+            </div>
+            <div class="row" ng-if="data.profile.mobile == null && data.email == null">
+              <span class="text-muted">No contact details</span>
+            </div>
+          <!-- </div> -->
         </div>
       </div>
     </div>
