--- a/HR/static/ngTemplates/app.HR.manage.users.items.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.items.html
@@ -2,27 +2,44 @@
   <div class="container-fluid">
     <div class="row">
       <div class="container-fluid card" style="padding-bottom:0px;">
-        <div class="row" style="border-bottom: 1px solid #dedede;">
+
+        <div class="row" style="border-bottom: 1px solid #dedede;height:100px;">
           <div class="col-md-4" style="padding:0px;">
-            <img style="width: 120px;height:120px;" class="img" ng-if="data.profile.displayPicture != null" ng-src="{{data.profile.displayPicture}}">
-            <img style="width: 120px;height:120px;" class="img" ng-if="data.profile.displayPicture == null" src="/static/images/userIcon.png">
+            <img style="height:95px;width:100%" class="img" ng-if="data.profile.displayPicture != null" ng-src="{{data.profile.displayPicture}}">
+            <img style="height:95px;width:100%" class="img" ng-if="data.profile.displayPicture == null" src="/static/images/userIcon.png">
           </div>
-          <div class="col-md-8" style="position:relative;display:block;">
-            <div class="row" style="padding-left:10px;">
+          <div class="col-md-8 text-center" style="position:relative;display:block;">
+            <span class="text-muted" style="position:absolute; top:10px;right:10px;">
+              <i class="fa fa-hashtag"></i> <span style="font-size:14px;">{{data.pk}}</span>
+            </span>
+            <div class="row" style="padding-top:10px">
               <h3>{{data.first_name + ' ' + data.last_name}}</h3>
-              <span class="text-muted" style="position:absolute; top:10px;right:10px;">
-                <i class="fa fa-hashtag"></i> <span style="font-size:14px;">{{data.pk}}</span>
-              </span>
             </div>
           </div>
         </div>
-        <div class="row container-fluid" style="padding-top:20px;height:70px;border-bottom: 1px solid #dedede">
-          <div class="container-fluid">
-            <span ng-if="data.profile.mobile != null"><strong><i style="width:30px;" class="fa fa-mobile"></i> </strong>{{data.profile.mobile}}</span> <br>
-            <span ng-if="data.email != null"><strong><i style="width:30px;" class="fa fa-envelope"></i> </strong>{{data.email}}</span>
 
-            <span ng-if="data.profile.mobile == null && data.email == null" class="text-muted">No contact details</span>
-          </div>
+        <div class="row" style="padding:10px;height:70px;border-bottom: 1px solid #dedede;font-size:17px">
+          <!-- <div class="col-md-12"> -->
+            <div class="row">
+              <div class="col-md-2">
+                <strong><i style="width:20px;" class="fa fa-user"></i> </strong>
+              </div>
+              <div class="col-md-10">
+                <span>{{data.username}}</span>
+              </div>
+            </div>
+            <div class="row" ng-if="data.email != null">
+              <div class="col-md-2">
+                <strong><i style="width:20px;" class="fa fa-envelope"></i> </strong>
+              </div>
+              <div class="col-md-10">
+                <span>{{data.email}}</span>
+              </div>
+            </div>
+            <div class="row" ng-if="data.profile.mobile == null && data.email == null">
+              <span class="text-muted">No contact details</span>
+            </div>
+          <!-- </div> -->
         </div>
         <!-- <div class="row text-center" style="background:#eeeeee;">
           <div class="col-md-8" style="padding:5px;">
@@ -33,7 +50,7 @@
     </div>
     <div class="row text-center" style="background:#d13548;color:white;">
       <div class="col-md-7" style="padding:10px;">
-        <div class="col-md-2">
+        <div class="col-md-3">
           <span style="cursor:pointer;" ng-click="rowActionClicked('editProfile')">
                 <i class="fa fa-pencil fa-lg" ></i>
               </span>
@@ -43,22 +60,18 @@
                 <i class="fa fa-credit-card fa-lg" ></i>
               </span>
         </div> -->
-        <div class="col-md-2">
-          <span style="cursor:pointer;" ng-click="rowActionClicked('editDesignation')">
-                <i class="fa fa-caret-up fa-2x" style="margin-top:-15px;" ></i>
-              </span>
-        </div>
-        <div class="col-md-2">
+
+        <div class="col-md-3">
           <span style="cursor:pointer;" ng-click="rowActionClicked('editPermissions')">
                 <i class="fa fa-key fa-lg" ></i>
               </span>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
           <span style="cursor:pointer;" ng-click="rowActionClicked('editMaster')">
                 <i class="fa fa-lock fa-lg" ></i>
               </span>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
           <span style="cursor:pointer;" ng-click="rowActionClicked('im')">
                 <i class="fa fa-envelope"></i>
               </span>
