--- a/support/static/ngTemplates/app.knowledgeBase.html
+++ b/support/static/ngTemplates/app.knowledgeBase.html
@@ -2,8 +2,8 @@
 
   <breadcrumb></breadcrumb>
 
-  <div style="padding-top:20px;">
-    <div class="row" style="margin:10px;">
+  <div style="">
+    <div class="row" style="margin:0px 10px;">
       <div class="col-md-12">
         <div class="row">
           <div class="col-md-3">
@@ -12,8 +12,8 @@
             </div>
           </div>
         </div>
-        <hr>
-        <div class="row" style="padding-top:15px">
+        <hr style="margin:5px 0px">
+        <div class="row" style="">
           <div class="col-md-3">
             <div class="row" style="border-right:solid 2px #e0e0e0;min-height:54vh;position:relative;" ng-if="custDocs.length>0||docForm!=none">
               <div class="row container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin:10px ;padding:15px; height:80px; border-radius:4px; box-shadow:none; {{docForm.pk==doc.pk?'background-color:#009efb ; color:white':'background-color: #e9e9e9 !important;'}}">
@@ -92,7 +92,7 @@
               </div>
 
             </div>
-            <div class="row" style="padding:20px">
+            <div class="row" style="">
               <div class="col-md-2 col-md-offset-5">
                 <div class="btn btn-block btn-success" style="font-size:18px" ng-click="saveDoc()">
                   Save Document
