--- a/support/static/ngTemplates/app.customers.html
+++ b/support/static/ngTemplates/app.customers.html
@@ -27,7 +27,7 @@
         <div ng-if="tab.app == 'companyEdit'">
           <div ng-include="'/static/ngTemplates/app.customers.form.html'"></div>
         </div>
-        <div ng-if="tab.app == 'companyInfo'">
+        <div ng-if="tab.app == 'customerExplore'">
           <div ng-include="'/static/ngTemplates/app.customers.explore.html'"></div>
         </div>
         <div ng-if="tab.app == 'document'">
