--- a/HR/static/ngTemplates/app.HR.manage.users.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.html
@@ -26,12 +26,12 @@
       </uib-tab> -->
 
 
-      <uib-tab>
+      <!-- <uib-tab>
         <uib-tab-heading>
           Customers <i ng-if="tab.cancel" class="fa fa-search"></i>
         </uib-tab-heading>
         <generic-Table callback-Fn="tableActionCustomer" data="dataCustomer.tableDataCustomer" config-Obj="{{configCustomer}}"></generic-Table>
-      </uib-tab>
+      </uib-tab> -->
 
 
       <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
